--- a/config/database.yml
+++ b/config/database.yml
@@ -20,24 +20,18 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
 
 development:
   <<: *default
-  database: blog_development
+  database: <%= ENV['POSTGRES_DEV_DB'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: blog
-
-  # The password associated with the postgres role (username).
-  #password:
-
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -57,10 +51,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: blog_test
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
-  username: <%= ENV['POSTGRES_USER'] %>
-  host: 127.0.0.1
+  database: <%= ENV['POSTGRES_TEST_DB'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -84,6 +75,6 @@ test:
 #
 production:
   <<: *default
-  database: blog_production
-  username: blog
+  database: bookit_api_prod
+  username: bookit
   password: <%= ENV["BLOG_DATABASE_PASSWORD"] %>
